--- a/okteto-stack.yaml
+++ b/okteto-stack.yaml
@@ -5,7 +5,7 @@ services:
     build: .
     replicas: 1
     environment:
-      - REDIS_URI=redis://redistogo:61aecf559c4129a88d3b445687c64c5b@sole.redistogo.com:10558/ #change this REDIS_URI get it from redistogo.com
+      - REDIS_URI=redis://default:6VuhH4jPVXEtVza3bdhV@containers-us-west-32.railway.app:6228/ #change this REDIS_URI get it from redistogo.com
       - PYTHON_ENV=prod
       - CACHE_EXPIRATION=180
     ports:
